refactor(global): restricted persistent implementations and DTO interfaces